Fix tree action buttons overflowing their container

--- a/everforest-ant-dark.css
+++ b/everforest-ant-dark.css
@@ -400,6 +400,11 @@ span.fancytree-node.protected > span.fancytree-custom-icon {
 .fancytree-expander::before {
     color: var(--devils-gray-lol);
 }
+/*tree action buttons*/
+button.tree-floating-button {
+    font-size: 1.5rem !important;
+}
+
 
 /***Trilium icon***/
 body .global-menu-button {
